# shtc1-rs

./: Cargo.toml  README.md
examples/: raspberrypi.rs
src/: lib.rs
