[package]
authors = ["Mike Walters <mike@flomp.net>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Driver for the Sensirion SHTC1 digital humidity sensor."
documentation = "https://docs.rs/shtc1"
keywords = ["embedded-hal-driver", "shtc1", "humidity", "i2c"]
license = "MIT OR Apache-2.0"
name = "shtc1"
repository = "https://github.com/miek/shtc1-rs"
version = "0.1.0"

[dependencies]
byteorder = { version = "1", default-features = false }
crc8 = "0.1.1"
embedded-hal = "0.2.0"

[dev-dependencies]
linux-embedded-hal = "0.1.1"
